# metatensor

./: .codecov.yml  .gitattributes  .gitignore  .readthedocs.yml  AUTHORS  CITATION.cff  CMakeLists.txt  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT.rst  CONTRIBUTING.rst  Cargo.toml  LICENSE  MANIFEST.in  README.md  README.rst  Readme.rst  asv.conf.json  build.rs  dump_to_disk.py  pyproject.toml  q  rustfmt.toml  setup.cfg  setup.py  test.py  tox.ini
equistore/: .gitignore  Cargo.toml  __init__.py  _c_api.py  _c_lib.py  block.py  build.rs  data.py  equistore-core  io.py  labels.py  status.py  tensor.py  utils.py
equistore-core/: CMakeLists.txt  Cargo.toml  build.rs
equistore-core/cmake/: equistore-config-version.in.cmake  equistore-config.in.cmake
equistore-core/include/: equistore.h  equistore.hpp
equistore-core/src/: blocks.rs  data.rs  labels.rs  lib.rs
equistore-core/src/c_api/: blocks.rs  data.rs  io.rs  labels.rs  mod.rs  status.rs  tensor.rs
equistore-core/src/io/: labels.rs  load.rs  mod.rs  npy_header.rs  save.rs
equistore-core/src/tensor/: keys_to_properties.rs  keys_to_samples.rs  mod.rs  utils.rs
equistore-core/tests/: c-api-install.rs  c-api-tests.rs  check-cxx-install.rs  data.npz
equistore-core/tests/cmake-project/: CMakeLists.txt  README.md
equistore-core/tests/cpp/: CMakeLists.txt  blocks.cpp  data.cpp  labels.cpp  tensor.cpp
equistore-core/tests/utils/: mod.rs
equistore-torch/: CMakeLists.txt  Cargo.toml  lib.rs
equistore-torch/cmake/: FindCUDNN.cmake  equistore_torch-config.in.cmake
equistore-torch/include/equistore/: torch.hpp
equistore-torch/src/: array.cpp  block.cpp  labels.cpp  misc.cpp  register.cpp  tensor.cpp
equistore-torch/tests/: CMakeLists.txt  array.cpp  block.cpp  check-torch-install.rs  labels.cpp  run-torch-tests.rs  tensor.cpp  valgrind.supp
equistore-torch/tests/cmake-project/: CMakeLists.txt  README.md
equistore-torch/tests/utils/: mod.rs
equistore/data/: __init__.py  extract.py
equistore/operations/: __init__.py  _dispatch.py  dot.py  lstsq.py  normalize.py  remove_gradients.py  solve.py
equistore/scripts/: update-core.sh
equistore/src/: c_api.rs  errors.rs  io.rs  labels.rs  lib.rs  tensor.rs
equistore/src/block/: block_mut.rs  block_ref.rs  mod.rs  owned.rs
equistore/src/data/: array.rs  array_ref.rs  mod.rs  origin.rs
equistore/tests/: components-to-properties.rs  keys-to-properties.rs  keys-to-samples.rs  serialization.rs
equistore/tests/utils/: mod.rs
metatensor/: .gitignore  CHANGELOG.md  Cargo.toml  build.rs
metatensor-core/: CHANGELOG.md  CMakeLists.txt  Cargo.toml  Clippy.toml  build.rs
metatensor-core/benchmarks/: CMakeLists.txt  bench_utils.cpp  bench_utils.hpp  classes-c.cpp  classes-cxx.cpp
metatensor-core/cmake/: detect_cargo.cmake  dev-versions.cmake  metatensor-config.in.cmake  tempdir.cmake  version-defines.cmake
metatensor-core/include/: metatensor.h  metatensor.hpp
metatensor-core/include/cxx/: mts_source.hpp
metatensor-core/include/metatensor/: arrays.hpp  block.hpp  errors.hpp  io.hpp  io_fwd.hpp  labels.hpp  tensor.hpp
metatensor-core/src/: blocks.rs  data.rs  labels.rs  labels_array.rs  lib.rs  test_utils.rs  utils.rs
metatensor-core/src/c_api/: blocks.rs  data.rs  io.rs  labels.rs  mod.rs  status.rs  tensor.rs  utils.rs
metatensor-core/src/io/: block.rs  labels.rs  load.rs  mmap.rs  mmap_array.rs  mod.rs  npy_header.rs  partial.rs  save.rs  tensor.rs
metatensor-core/src/labels/: array.rs  mod.rs
metatensor-core/src/tensor/: keys_to_properties.rs  keys_to_samples.rs  mod.rs  utils.rs
metatensor-core/tests/: block.mts  check-cxx-install.rs  data.mts  keys.mts  keys.npy  run-cxx-tests.rs
metatensor-core/tests/cmake-project/: CMakeLists.txt  README.md
metatensor-core/tests/cpp/: CMakeLists.txt  blocks.cpp  data.cpp  labels.cpp  misc.cpp  tensor.cpp
metatensor-core/tests/utils/: mod.rs
metatensor-torch/: CHANGELOG.md  CMakeLists.txt  Cargo.toml  README.md  VERSION
metatensor-torch/benchmarks/: CMakeLists.txt  bench_utils.cpp  bench_utils.hpp  classes.cpp
metatensor-torch/cmake/: FindCUDNN.cmake  dev-versions.cmake  metatensor_torch-config.in.cmake
metatensor-torch/include/metatensor/: torch.hpp
metatensor-torch/src/: array.cpp  atomistic.cpp  block.cpp  labels.cpp  misc.cpp  module.cpp  register.cpp  tensor.cpp  utils.hpp
metatensor-torch/src/atomistic/: model.cpp  system.cpp
metatensor-torch/src/internal/: scalar_type_name.hpp  shared_libraries.cpp  shared_libraries.hpp  utils.hpp
metatensor-torch/tests/: CMakeLists.txt  array.cpp  atomistic.cpp  block.cpp  check-torch-install.rs  create-test-module.py  labels.cpp  misc.cpp  module.cpp  run-torch-tests.rs  shared-libraries.cpp  tensor.cpp  test-module.pt  utils  valgrind.supp
metatensor-torch/tests/cmake-project/: CMakeLists.txt  README.md
metatensor-torch/tests/neighbor-checks/: README.md  empty.json  fcc-full-loose.json  fcc-full.json  fcc-half.json  large-cell.json  slanted-loose.json  slanted.json
metatensor-torch/tests/utils/: mod.rs
metatensor/src/: c_api.rs  errors.rs  io.rs  labels.rs  lib.rs  tensor.rs
metatensor/src/block/: block_mut.rs  block_ref.rs  owned.rs
metatensor/src/data/: array.rs  array_ref.rs
metatensor/tests/: components-to-properties.rs  data.npz  keys-to-properties.rs  keys-to-samples.rs  keys.npy  serialization.rs
metatensor/tests/utils/: mod.rs
python/equistore-core/: MANIFEST.in  README.rst  pyproject.toml  setup.py  version_from_git.py
python/metatensor-core/: CMakeLists.txt  MANIFEST.in  README.rst  pyproject.toml  setup.py
python/metatensor-torch/: .gitignore  CMakeLists.txt  MANIFEST.in  README.rst  pyproject.toml  setup.py
python/metatensor_core/: CMakeLists.txt  MANIFEST.in  pyproject.toml  setup.py
python/metatensor_learn/: CHANGELOG.md  MANIFEST.in  README.rst  pyproject.toml  setup.py
python/metatensor_torch/: .gitignore  CMakeLists.txt  MANIFEST.in  pyproject.toml  setup.py
rust/metatensor/: CHANGELOG.md  Cargo.toml
rust/metatensor-sys/: .gitignore  Cargo.toml  README.md  build.rs
rust/metatensor-sys/src/: c_api.rs  (+1 more)
(+1319 files in other folders)
