[package]
name = "equistore"
version = "0.1.0"
edition = "2018"

[lib]
name = "equistore"
# when https://github.com/rust-lang/cargo/pull/8789 lands, use it here!
# until then, build all the crate-type we need
crate-type = ["cdylib", "staticlib", "rlib"]
bench = false

[dependencies]
twox-hash = "1"
indexmap = "1"
once_cell = "1"
ndarray = {version = "0.15", optional = true}

[build-dependencies]
cbindgen = "0.20"
glob = "0.3"
