[project]
name = "metatensor"
dynamic = ["version", "authors", "dependencies", "optional-dependencies"]

readme = "README.md"
license = {text = "BSD-3-Clause"}
description = "Self-describing sparse tensor data format for atomistic machine learning and beyond"

keywords = ["machine learning", "molecular modeling"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: POSIX",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
homepage = "https://docs.metatensor.org/"
documentation = "https://docs.metatensor.org/"
repository = "https://github.com/metatensor/metatensor"
changelog = "https://docs.metatensor.org/latest/core/CHANGELOG.html"

### ======================================================================== ###

[build-system]
requires = [
    "setuptools >=68",
    "packaging >=23",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
zip-safe = true
packages = []

### ======================================================================== ###

[tool.isort]
skip = "__init__.py"
profile = "black"
line_length = 88
indent = 4
include_trailing_comma = true
lines_after_imports = 2
known_first_party = "metatensor"

### ======================================================================== ###

[tool.coverage.paths]
# path remapping for coverage. `coverage` will map path matching the second
# string to the first string.
core = ["python/metatensor-core/", ".tox/*/lib/python*/site-packages/"]
torch = ["python/metatensor-torch/", ".tox/*/lib/python*/site-packages/"]
operations = ["python/metatensor-operations/", ".tox/*/lib/python*/site-packages/"]
learn = ["python/metatensor-learn/", ".tox/*/lib/python*/site-packages/"]

[tool.coverage.report]
show_missing = true
omit = ["documentation.py"]

### ======================================================================== ###

[tool.pytest.ini_options]
# ignore" a bunch of internal warnings with Python 3.12 and PyTorch
filterwarnings = [
    "error",
    "ignore:ast.Str is deprecated and will be removed in Python 3.14:DeprecationWarning",
    "ignore:Attribute s is deprecated and will be removed in Python 3.14:DeprecationWarning",
    "ignore:ast.NameConstant is deprecated and will be removed in Python 3.14:DeprecationWarning",
]
