[metadata]
name = equistore
description = "A specialized data storage format suited to atomistic machine learning needs and more."
long_description = file: README.rst
long_description_content_type = text/x-rst

; license_files =
; author =
; author_email =
; keywords =
; url =
; classifiers =

python_requires = >=3.6

[options]
zip_safe = False
packages = find:
package_dir =
    = python/src
install_requires = numpy

[options.packages.find]
where = python/src

[bdist_wheel]
universal = 1

[flake8]
max_line_length = 88
ignore =
    E203
    W503
