[metadata]
name = equistore
url = https://github.com/lab-cosmo/equistore
description = A specialized data storage format suited to atomistic machine learning needs and more.
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords = computational science, machine learning
license = BSD-3-Clause
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta,
    Intended Audience :: Science/Research,
    License :: OSI Approved :: BSD License,
    Operating System :: POSIX,
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows,
    Programming Language :: Python,
    Programming Language :: Python :: 3,
    Programming Language :: Python :: 3.7,
    Programming Language :: Python :: 3.8,
    Programming Language :: Python :: 3.9,
    Programming Language :: Python :: 3.10,
    Programming Language :: Python :: 3.11,
    Programming Language :: C,
    Programming Language :: Rust,
    Topic :: Scientific/Engineering,
    Topic :: Scientific/Engineering :: Bio-Informatics,
    Topic :: Scientific/Engineering :: Chemistry,
    Topic :: Scientific/Engineering :: Physics,
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules,

[options]
zip_safe = False
install_requires = numpy
packages = find:
python_requires = >=3.7
package_dir =
    = python/src

[options.packages.find]
where = python/src
